Bug 79810 - DOCX IMPORT: Wrong underline applied to list style
Summary: DOCX IMPORT: Wrong underline applied to list style
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.2.6.1 rc
Hardware: All All
: highest major
Assignee: Miklos Vajna
URL:
Whiteboard: target:4.3.6
Keywords: bibisected, bisected, regression
Depends on:
Blocks: mab4.3
  Show dependency treegraph
 
Reported: 2014-06-09 02:27 UTC by Kevin Suo
Modified: 2015-12-17 08:23 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Test DOCX file (15.17 KB, application/vnd.openxmlformats-officedocument.wordprocessingml)
2014-06-09 02:27 UTC, Kevin Suo
Details
LibreOffice 4.3.0 beta2 screenshot (35.38 KB, image/png)
2014-06-09 02:28 UTC, Kevin Suo
Details
LibreOffice 4.2.5.1 screenshot (28.16 KB, image/png)
2014-06-09 02:29 UTC, Kevin Suo
Details
MSO 2010 screenshot (34.67 KB, image/png)
2014-06-09 02:29 UTC, Kevin Suo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Suo 2014-06-09 02:27:07 UTC
Created attachment 100692 [details]
Test DOCX file

Problem description:
When open a docx file with list style, the underline format is also applied to the list symple chars, which is wrong.

Steps to reproduce:
1. Open the attached docx file with LibreOffice;

Current Behaviour:
Underline is applied to "A. list 1", "B. list 2", and "C. list 3".

Expected Behaviour:
Underline should only be applied to "list 1", "list 2", and "list 3".

Reproduce in version: 4.3.0 beta 2.
Works ok in 4.2.5.1, so it's a regression.

OS: Windows XP SP3
Comment 1 Kevin Suo 2014-06-09 02:28:36 UTC
Created attachment 100693 [details]
LibreOffice 4.3.0 beta2 screenshot
Comment 2 Kevin Suo 2014-06-09 02:29:13 UTC
Created attachment 100694 [details]
LibreOffice 4.2.5.1 screenshot

It works OK in 4.2.5.1
Comment 3 Kevin Suo 2014-06-09 02:29:28 UTC
Created attachment 100695 [details]
MSO 2010 screenshot
Comment 4 Kevin Suo 2014-06-09 02:31:06 UTC
Set importance to HIGH MAJOR, because it causes format loss.
Comment 5 retired 2014-06-09 10:29:24 UTC
Confirmed:4.3b2:OSX 10.9.3
-> NEW

Thanks for the report suokunlong
Comment 6 Xisco Faulí 2014-06-11 16:15:12 UTC
Can't be bibisected with 43all re
Comment 7 Michael Stahl (allotropia) 2014-07-10 19:17:12 UTC
the 4.2.6.1 is also buggy, but the version has not yet been added to bugzilla...

regression from:

commit 2d89b1a029514935b60fbd3f7f7c5341a329bfc8
Author:     Luboš Luňák <l.lunak@collabora.com>
AuthorDate: Thu May 29 14:31:20 2014 +0200

    handle direct formatting for numbering in .docx (bnc#875717)
Comment 8 Björn Michaelsen 2014-08-21 12:17:15 UTC
(This is an automated message.)

Setting priority to highest as this is a MAB. This is part of an effort to make the importance of MAB reflected in priority too.
Comment 9 Björn Michaelsen 2014-10-16 14:58:59 UTC
(This is an automated message.)

It seems that the commit that caused this regression was identified. (Or at least a commit is suspected as the offending one.)

Thus setting keyword "bisected".
Comment 10 Timur 2014-12-24 19:59:21 UTC
OK in 4.2.5.2, NOT OK in 4.2.6.1 (regression), NOT OK in 4.3.5.2 (current), OK in 4.4.0.1. (how comes this?)
Comment 11 Michael Stahl (allotropia) 2015-01-09 20:36:27 UTC
was fixed by commit b2c1474c1dc93b69f0ede03fc5c9ab496c669955
Comment 12 Commit Notification 2015-01-09 21:09:40 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=54eb3d31b7be999468f1ae54a99730a8c739a22d&h=libreoffice-4-3

fdo#79810: SwTxtNode::IsIgnoredCharFmtForNumbering: ignore RES_CHRATR_COLOR

It will be available in 4.3.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Robinson Tryon (qubit) 2015-12-17 08:23:14 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]