fdo#79810: SwTxtNode::IsIgnoredCharFmtForNumbering: ignore RES_CHRATR_COLOR

And also in SwTxtFormatter::NewNumberPortion(), use
SwTxtNode::IsIgnoredCharFmtForNumbering(), via
checkApplyParagraphMarkFormatToNumbering().  Otherwise the color of the
paragraph mark is inherited by the numbering portion, which is not what
IDocumentSettingAccess::APPLY_PARAGRAPH_MARK_FORMAT_TO_NUMBERING
(mirroring Word's behavior) is supposed to do.

(cherry picked from commit b2c1474c1dc93b69f0ede03fc5c9ab496c669955)
Signed-off-by: Michael Stahl <mstahl@redhat.com>

This fixes regression fdo#79810.

Conflicts:
	sw/qa/extras/ooxmlexport/data/num-override-lvltext.docx
	sw/qa/extras/ooxmlexport/ooxmlexport.cxx
	sw/source/core/text/txtfld.cxx

Change-Id: I5d8df9b404916cc4a4405bf796d971ede59e6111